// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/AdditionalTabs should not render the loading state after the image URLs have loaded 1`] = `
<div
  className="bdl-AdditionalTabs"
>
  <AdditionalTab
    callback={[MockFunction]}
    iconUrl="https://foo.com/icon"
    id={200}
    isLoading={false}
    key="200"
    onImageLoad={[Function]}
    status="ADDED"
    title="Test title"
  />
</div>
`;

exports[`elements/content-sidebar/AdditionalTabs should render the correct number of tabs and the loading state 1`] = `
<div
  className="bdl-AdditionalTabs"
>
  <AdditionalTabsLoading />
  <AdditionalTab
    callback={[MockFunction]}
    iconUrl="https://foo.com/icon"
    id={200}
    isLoading={true}
    key="200"
    onImageLoad={[Function]}
    status="ADDED"
    title="Test title"
  />
  <AdditionalTab
    callback={[MockFunction]}
    iconUrl="https://foo.com/icon"
    id={1}
    isLoading={true}
    key="1"
    onImageLoad={[Function]}
    status="ADDED"
    title="Another title"
  />
</div>
`;
